fix: update S3 key generation to use commit hash and streamline CloudFormation parameters

--- a/.github/workdlows/aws-deployment.yml
+++ b/.github/workdlows/aws-deployment.yml
@@ -37,13 +37,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Generate timestamp
-        id: timestamp
-        run: echo "value=$(date +%s)" >> $GITHUB_OUTPUT
+      - name: Generate S3 key with commit hash
+        id: s3key
+        run: echo "value=lambda-${{ github.sha }}.zip" >> $GITHUB_OUTPUT
 
       - name: Upload Lambda artifact to S3
         run: |
-          aws s3 cp lambda.zip s3://${{ secrets.DEPLOYMENT_BUCKET }}/lambda-${{ steps.timestamp.outputs.value }}.zip
+          aws s3 cp lambda.zip s3://${{ secrets.DEPLOYMENT_BUCKET }}/${{ steps.s3key.outputs.value }}
 
       - name: Deploy CloudFormation stack
         run: |
@@ -51,7 +51,7 @@ jobs:
             --template-file template.yml \
             --stack-name drink-tracker \
             --capabilities CAPABILITY_NAMED_IAM \
-            --parameter-overrides DeploymentBucket=${{ secrets.DEPLOYMENT_BUCKET }} LambdaS3Key=lambda-${{ steps.timestamp.outputs.value }}.zip
+            --parameter-overrides DeploymentBucket=${{ secrets.DEPLOYMENT_BUCKET }} LambdaS3Key=${{ steps.s3key.outputs.value }}
 
       - name: Describe stack outputs
         run: |
