fear: defined paths to trigger GitHub Actions on push

--- a/.github/workflows/aws-deployment.yml
+++ b/.github/workflows/aws-deployment.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "src/**"
+      - "template.yml"
+      - ".github/workflows/aws-deployment.yml"
+      - "package.json"
 
 jobs:
   deploy:
